--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,13 +4,63 @@
         <h1><a href="#">TP2 : Marketplace</a></h1>
     </div>
     <nav class="site-navigation">
-        <ul class="nav">
+        <ul class="nav m-auto">
             <li><a href="#">Categories</a></li>
             <li><a href="#">Nouveautés</a></li>
             <li><a href="#">Contactez-nous</a></li>
-            <li><a href="#">
+            <li><a href="#"  data-bs-toggle="modal" data-bs-target="#exampleModal">
                 Panier <span class="badge" [ngClass]="{ 'badge-green': cartItems.length > 0, 'badge-yellow': cartItems.length === 0 }">{{ cartItems.length }}</span>
             </a></li>
         </ul>
     </nav>
 </header>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Panier  <span class="badge" [ngClass]="{ 'badge-green': cartItems.length > 0, 'badge-yellow': cartItems.length === 0 }">{{ cartItems.length }}</span> </h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <table class="table">
+          <thead>
+            <tr>
+              <th>Image</th>
+              <th>Name</th>
+              <th>Quantity</th>
+              <th>Price</th>
+              <th>Subtotal</th>
+              <th>Action</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let cartItem of cartItems">
+              <td><img [src]="cartItem.item.image" alt="{{ cartItem.item.title }}" width="50"></td>
+              <td>{{ cartItem.item.title }}</td>
+              <td>
+                <button class="btn btn-outline-primary btn-sm" (click)="decrementQuantity(cartItem)">-</button>
+                {{ cartItem.quantity }}
+                <button class="btn btn-outline-primary btn-sm" (click)="incrementQuantity(cartItem)">+</button>
+              </td>
+              <td>{{ cartItem.item.price | currency }}</td>
+              <td>{{ cartItem.quantity * cartItem.item.price | currency }}</td>
+              <td>
+                <button class="btn btn-danger btn-sm" (click)="removeFromCart(cartItem)">Remove</button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+        <!-- Display total price for all products -->
+        <div class="text-end">
+          <strong>Total: {{ calculateTotal() | currency }}</strong>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger" (click)="removeAllProducts()">Remove All Products</button>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
